# option

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_GUIDE.md  CHANGELOG.md  CLAUDE.md  Comparison of Leading Options Analysis Platforms for Retail Traders  DEVELOPMENT_ROADMAP.md  GITHUB_SETUP.md  GIT_AUTOMATION_GUIDE.md  PLATFORM_OVERVIEW.md  PROJECT_SUMMARY.md  QUICK_START_GUIDE.md  README.md  RELEASE_NOTES.md  TOKEN_UPGRADE.md  auth_setup.sh  auto_version_setup.py  configure_delayed_data.py  download_apple_monthly.py  flask_api.py  git  historical_data_demo.py  main.py  project.md  projectplan.md  prompt_sample.md  pyproject.toml  requirements.txt  run_calc.py  run_scheduler.py  run_simple.py  run_ui.py  simple_option_chain.py  start_ui.py  test_analytics.py  test_auto_commit.py  test_flask_ui.py  test_strategies.py  test_symbol_picker.py  (+4 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  data_architecture.md  development-guidelines.md  development_lessons_learned.md  workflow.md  项目的结构分析.md
docs/troubleshooting/: ui-deploy-button-and-event-loop-issues.md
exports/: AAPL_Options_Historical_20250626_160207.xlsx  AAPL_Options_Historical_20250626_160237.xlsx
scripts/: auto_commit.py  git_workflow.sh
src/analytics/: backtesting.py  black_scholes.py  implied_volatility.py  strategies.py  volatility.py
src/data_sources/: database.py  ib_client.py  storage.py  validation.py
src/scheduler/: __init__.py  market_scheduler.py
src/services/: async_data_service.py  (+3 more)
tasks/: todo.md
tests/: conftest.py
(+22 files in other folders)
